local-kubernetes/kind/workloads/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
  - host: argocd.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: /argocd
        backend:
          service:
            name: argocd-server
            port:
              number: 80
